--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push, pull_request]
 
 env:
-  DATABASE_URL: env("DATABASE_URL")
+  DATABASE_URL: "https://fake.com"
 
 jobs:
   build:
