--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.13.0",
     "@clerk/themes": "^1.5.1",
+    "@formkit/auto-animate": "1.0.0-beta.6",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
